infrastructure/auth/forward-auth/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: default
spec:
  forwardAuth:
    address: http://traefik-forward-auth.kube-system.svc.cluster.local
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
