infrastructure/auth/forward-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: forward-auth.auth.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 80
  tls:
    - hosts:
        - forward-auth.auth.apoorva64.com
      secretName: forward-auth-tls-ingress
